--- a/index.html
+++ b/index.html
@@ -147,29 +147,35 @@
       <img src="images/svg/logo-footer.svg" width="115" height="33" alt="Логотип сайта Седона">
      </a>
     </footer>
-     <div class="modal-container">
-      <div class="modal modal-search">
+    <div class="modal-container">
+       <div class="modal modal-search">
+        <div class="title-wrapper">
+          <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
         <button class="modal-close-button">
           <span class="visually-hidden">Закрыть</span>
         </button>
-       <section class="modal-content">
-        <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
-         <form class="searh-form" action="https://echo.htmlacademy.ru/" method="post">
-          <div class="date-wrapper">
+        </div>
+        <section class="modal-content">
+          <form class="searh-form" action="https://echo.htmlacademy.ru/" method="post">
+          <div class="field-row-wrapper">
+            <div class="field-date">
               <label class="label-date">
-                <span class="input-lable">Дата заезда:</span>
+                <span class="input-label">Дата заезда:</span>
                 <input class="search-form-field arrival-date" type="text" name="arrival-date" value= "27 апреля 2020" required>
               </label>
               <p class="field-message warning-message">Мы не можем отправить вас в прошлое.</p>
+            </div>
+            <div class="field-date">
               <label class="label-date">
-                <span class="input-lable">Дата выезда:</span>
+                <span class="input-label">Дата выезда:</span>
                 <input class="search-form-field departure-date" type="text" name="departure-date" value= "1 сентября 2023" required>
               </label>
               <p class="field-message">На эти даты есть свободные номера. Пока есть.</p>
+            </div>
            </div>
-           <div class="age-wrapper">
+           <div class="field-age-wrapper">
             <div class="adults-wrapper">
-              <label class="input-lable input-lable-adults" for="adults">Взрослые:</label>
+              <label class="input-label input-label-adults" for="adults">Взрослые:</label>
                 <button class="button-field button-minus" type="button">
                   <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                    <path d="M3 9V11H17V9H3Z" fill="#756157" fill-opacity="0.3" />
@@ -185,18 +191,16 @@
                 </button>
             </div>
             <div class="children-wrapper">
-             <div class="tooltip-wrapper">
-              <label class="input-lable input-lable-children" for="children">Дети:</label>
-               <span class="tooltip">
+             <label class="input-label input-label-children" for="children">Дети:</label>
+              <div class="tooltip">
                <button class="tooltip-toggle" type="button" aria-labelledby="tooltip-info">
                 <span class="visually-hidden">Информация</span>
-               </button>
-            </div>
-              <span class="tooltip-text" id="tooltip-info" role="tooltip">
+                <span class="tooltip-text" id="tooltip-info" role="tooltip">
                 Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.
               </span>
-              </span>
-               <button class="button-field button-minus" type="button" >
+                </button>
+              </div>
+              <button class="button-field button-minus" type="button" >
                   <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                    <path d="M3 9V11H17V9H3Z" fill="#756157" fill-opacity="0.3" />
                   </svg>
@@ -210,10 +214,9 @@
                   <span class="visually-hidden">Плюс</span>
                 </button>
               </div>
-            </div>
-          <button class="button button-secondary button-modal" type="submit">Найти</button>
-         </form>
-       </section>
+            </form>
+          </section>
+        <button class="button button-secondary button-modal" type="submit">Найти</button>
       </div>
     </div>
   </body>
