--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <h3>Мало<br> туристов</h3>
             <p>Большинство едет в Гранд Каньон и толпится там</p>
           </li>
-          <li class="advantages-item advantages-item-image advantages-item-reverse ">
+          <li class="advantages-item advantages-item-image advantages-item-reverse">
              <div class="advantages-wrapper">
             <h3>Там есть<br> мост дьявола</h3>
             <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
@@ -82,7 +82,7 @@
           </li>
         </ul>
         </section>
-        <section class= "advertising">
+        <section class= "advertising" data-test="service">
           <h2 class="visually-hidden">Реклама отелей Седоны</h2>
         <p class="advertising-title">Приезжайте в Седону отдохнуть<br> в комфорте и уюте!</p>
         <p class="advertising-text">Опытный персонал и качественное обслуживание!</p>
@@ -137,8 +137,7 @@
         </a>
 
       <li class="social-item">
-
-       <a class="social-link youtube" href="https://www.youtube.com/user/htmlacademyru">
+        <a class="social-link youtube" href="https://www.youtube.com/user/htmlacademyru">
           <svg xmlns="http://www.w3.org/2000/svg" width="22" height="17">
             <path d="M18.94.36H3.51C1.65.36.33 1.95.33 3.76v10.09c0 1.91 1.32 3.5 3.18 3.5h15.65c1.64 0 3.17-1.59 3.17-3.4V3.76c-.22-1.8-1.53-3.4-3.39-3.4ZM7.99 12.89V4.82l7.34 4.04-7.34 4.03Z" />
           </svg>
@@ -161,7 +160,7 @@
     </a>
   </footer>
     <div class="modal-container">
-       <div class="modal">
+       <div class="modal" data-test="modal">
         <div class="title-wrapper">
           <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
         <button class="modal-close-button">
