--- a/catalog.html
+++ b/catalog.html
@@ -146,30 +146,30 @@
      </select>
      <ul class="cards-view-list list-none">
       <li class="cards-view-item">
-        <button class="cards-view-link active-card" href="catalog.html?view=tile" type="button">
+        <a class="cards-view-link active-card" href="catalog.html?view=tile">
           <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g clip-path="url(#clip0_172287_169)"><path d="M4 0H0V6H4V0Z" fill="black" /><path d="M16 0H12V6H16V0Z" fill="black" /><path d="M10 0H6V6H10V0Z" fill="black" /><path d="M4 8H0V14H4V8Z" fill="black" /><path d="M16 8H12V14H16V8Z" fill="black" />
             <path d="M10 8H6V14H10V8Z" fill="black" />
             </g><defs><clipPath id="clip0_172287_169"><rect width="16" height="14" fill="white" /></clipPath></defs>
           </svg>
            <span class="visually-hidden">Отображение плиткой</span>
-        </button>
+        </a>
       </li>
       <li class="cards-view-item">
-        <button class="cards-view-link" href="catalog.html?view=card" type="button">
+        <a class="cards-view-link" href="catalog.html?view=card">
           <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M16 12H0V14H16V12Z" fill="black" /><path d="M14 2V8H2V2H14ZM16 0H0V10H16V0Z" fill="black" />
           </svg>
            <span class="visually-hidden">Крупный значки</span>
-        </button>
+        </a>
       </li>
       <li class="cards-view-item">
-        <button class="cards-view-link" href="catalog.html?view=list" type="button">
+        <a class="cards-view-link" href="catalog.html?view=list">
           <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(#clip0_172287_295)"><path d="M2 0H0V2H2V0Z" fill="black" /><path d="M16 0H4V2H16V0Z" fill="black" />
            <path d="M2 4H0V6H2V4Z" fill="black" /><path d="M16 4H4V6H16V4Z" fill="black" /><path d="M2 8H0V10H2V8Z" fill="black" /><path d="M16 8H4V10H16V8Z" fill="black" />
            <path d="M2 12H0V14H2V12Z" fill="black" /><path d="M16 12H4V14H16V12Z" fill="black" /></g><defs><clipPath id="clip0_172287_295"><rect width="16" height="14" fill="white" /></clipPath></defs>
           </svg>
            <span class="visually-hidden">Отображение списком</span>
-        </button>
+        </a>
        </li>
       </ul>
      </div>
