--- a/catalog.html
+++ b/catalog.html
@@ -5,12 +5,12 @@
     <title>Проект Седона</title>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="icon" href="favicon.ico">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/svg/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
   </head>
   <body>
   <header class="page-header" data-test="header">
      <nav class="navigation">
-       <a class="navigation-logo" href="#">
+       <a class="navigation-logo" href="index.html">
         <img src="images/svg/logo-header.svg" width="140" height="70" alt="Логотип сайта Седона">
        </a>
        <ul class="navigation-list list-none">
@@ -21,7 +21,7 @@
           <a class="navigation-link" href="#">О Седоне</a>
         </li>
         <li class="navigation-item active">
-          <a class="navigation-link" href="catalog.html">Гостиницы</a>
+          <a class="navigation-link" href="#">Гостиницы</a>
         </li>
        </ul>
        <ul class="navigation-user-list list-none">
@@ -146,30 +146,30 @@
      </select>
      <ul class="cards-view-list list-none">
       <li class="cards-view-item">
-        <button class="cards-view-link active-card" type="button">
+        <a class="cards-view-link active-card" href="catalog.html?view=tile">
           <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g clip-path="url(#clip0_172287_169)"><path d="M4 0H0V6H4V0Z" fill="black" /><path d="M16 0H12V6H16V0Z" fill="black" /><path d="M10 0H6V6H10V0Z" fill="black" /><path d="M4 8H0V14H4V8Z" fill="black" /><path d="M16 8H12V14H16V8Z" fill="black" />
             <path d="M10 8H6V14H10V8Z" fill="black" />
             </g><defs><clipPath id="clip0_172287_169"><rect width="16" height="14" fill="white" /></clipPath></defs>
           </svg>
            <span class="visually-hidden">Отображение плиткой</span>
-        </button>
+        </a>
       </li>
       <li class="cards-view-item">
-        <button class="cards-view-link" type="button">
+        <a class="cards-view-link" href="catalog.html?view=card">
           <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M16 12H0V14H16V12Z" fill="black" /><path d="M14 2V8H2V2H14ZM16 0H0V10H16V0Z" fill="black" />
           </svg>
            <span class="visually-hidden">Крупный значки</span>
-        </button>
+        </a>
       </li>
       <li class="cards-view-item">
-        <button class="cards-view-link" type="button">
+        <a class="cards-view-link" href="catalog.html?view=list">
           <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(#clip0_172287_295)"><path d="M2 0H0V2H2V0Z" fill="black" /><path d="M16 0H4V2H16V0Z" fill="black" />
            <path d="M2 4H0V6H2V4Z" fill="black" /><path d="M16 4H4V6H16V4Z" fill="black" /><path d="M2 8H0V10H2V8Z" fill="black" /><path d="M16 8H4V10H16V8Z" fill="black" />
            <path d="M2 12H0V14H2V12Z" fill="black" /><path d="M16 12H4V14H16V12Z" fill="black" /></g><defs><clipPath id="clip0_172287_295"><rect width="16" height="14" fill="white" /></clipPath></defs>
           </svg>
            <span class="visually-hidden">Отображение списком</span>
-        </button>
+        </a>
        </li>
       </ul>
      </div>
@@ -304,8 +304,10 @@
        </a>
       </li>
     </ul>
-     <a class="contact-link" href="tel:+78128121212">+7 (812) 812-12-12</a>
-     <a class="footer-logo" href="https://htmlacademy.ru/">
+     <div class="contact-number">
+      <a class="contact-link" href="tel:+78128121212">+7 (812) 812-12-12</a>
+    </div>
+     <a class="footer-logo" href="https://htmlacademy.ru/intensive/htmlcss">
       <svg xmlns="http://www.w3.org/2000/svg" width="115" height="34">
         <g clip-path="url(#a)">
           <path d="M0 13.26v2.6h2.5v-2.6H0ZM11.6 4.86c-1.6 0-2.8.7-3.6 1.7h-.1V.36h-2v15.5h2v-5.3c0-2.1 1.3-3.6 3.3-3.6 1.8 0 2.9 1.4 2.9 3.2v5.7h2v-6.1c.1-3-1.8-4.9-4.5-4.9ZM26.6 5.16h-4.8v-3.7h-2v3.8h-1.9v2h1.9v6c0 1.7 1 2.7 2.7 2.7h4.1v-2h-3.7c-.7 0-1.1-.4-1.1-1.1v-5.7h4.8v-2ZM41.1 4.96c-1.6 0-2.9.8-3.5 2.1h-.1c-.6-1.2-1.8-2.1-3.4-2.1-1.4 0-2.5.8-3.1 1.8h-.1v-1.6H29v10.6h2v-5.4c0-2 1-3.5 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.5-1.4-4.3-3.9-4.3ZM47.8 13.06c0 1.7 1 2.7 2.8 2.7h2v-2h-1.7c-.7 0-1.1-.4-1.1-1.1V.36h-2v12.7ZM28.9 20.06c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2v-10.6h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.4 3.6-3.6 3.6ZM44.2 22.36c-.5-2.4-2.6-4.1-5.4-4.1a5.4 5.4 0 0 0-5.6 5.6c0 3.1 2.2 5.6 5.6 5.6 2.8 0 4.9-1.8 5.4-4.2h-2.1a3.4 3.4 0 0 1-3.3 2.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6c1.6 0 2.8 1 3.3 2.2h2.1v-.2ZM55.1 20.06c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2v-10.6h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.5 3.6-3.6 3.6ZM68.7 20.16c-.9-1.1-2.2-1.9-3.9-1.9-3.1 0-5.4 2.3-5.4 5.6s2.2 5.6 5.4 5.6c1.7 0 3-.8 3.8-1.8h.1v1.5h2v-15.4h-2v6.4Zm-3.6 7.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c-.1 2-1.5 3.6-3.6 3.6ZM78.3 18.26c-3.3 0-5.5 2.5-5.5 5.6 0 3 2.1 5.6 5.5 5.6 2.5 0 4.5-1.3 5.2-3.6h-2.1c-.5 1-1.6 1.6-3 1.6-1.9 0-3.3-1.3-3.4-2.9h8.8c.2-3.6-2-6.3-5.5-6.3Zm0 1.9c1.7 0 3 1 3.3 2.6h-6.5c.3-1.5 1.5-2.6 3.2-2.6ZM98.2 18.26c-1.6 0-2.9.8-3.6 2h-.1c-.6-1.2-1.8-2-3.4-2-1.4 0-2.5.7-3.1 1.8v-1.5h-1.9v10.6h2v-5.4c0-2 1-3.4 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.6-1.4-4.4-3.9-4.4ZM109.4 27.36l-3.6-8.9h-2.2l4.8 11.6c-.3.9-.7 1.2-1.7 1.2h-2.5v2h2.5c1.8 0 2.8-.8 3.5-2.6l4.7-12.2h-2.1l-3.4 8.9Z" />
