--- a/catalog.html
+++ b/catalog.html
@@ -21,7 +21,7 @@
           <a class="navigation-link" href="#">О Седоне</a>
         </li>
         <li class="navigation-item active">
-          <a class="navigation-link" href="#">Гостиницы</a>
+          <a class="navigation-link current-link" href="#">Гостиницы</a>
         </li>
        </ul>
        <ul class="navigation-user-list list-none">
@@ -43,7 +43,7 @@
           </a>
         </li>
        </ul>
-       <a class="button button-primary button-small" href="#">Хочу сюда!</a>
+       <a class="button button-primary button-header" href="#">Хочу сюда!</a>
      </nav>
     </header>
     <main class="main-catalog" data-test="main">
