--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
        </a>
        <ul class="navigation-list list-none">
         <li class="navigation-item active">
-          <a class="navigation-link" href="#">Главная</a>
+          <a class="navigation-link current-link" href="#">Главная</a>
         </li>
         <li class="navigation-item">
           <a class="navigation-link" href="#">О Седоне</a>
@@ -43,7 +43,7 @@
           </a>
         </li>
        </ul>
-       <a class="button button-primary button-small" href="#">Хочу сюда!</a>
+       <a class="button button-primary button-header" href="#">Хочу сюда!</a>
      </nav>
     </header>
     <main data-test="main">
